# mlir-tactics

./: README.md
llvm/: CMakeLists.txt
mlir/benchmark/: 2dConv.mlir  2mm.mlir  3mm.mlir  TENSORabaccb.mlir  TENSORabaccb_testInputPos.mlir  TENSORabacddbc.mlir  TENSORabcacddb.mlir  TENSORabcadbdc.mlir  TENSORabcaddcb.mlir  TENSORabcbdadc.mlir  TENSORabcdaebfdfce.mlir  TENSORabcdaebffdec.mlir  atax.mlir  bicg.mlir  dgemm-tiled-benchmark.mlir  dynprog.mlir  gemm.mlir  gemver.mlir  gessumv.mlir  im2col.mlir  implIm2Col.mlir  mvt.mlir  sgemm-tiled-benchmark-2x.mlir  sgemm-tiled-benchmark.mlir  syrk.mlir  testRunningTranspose.mlir  transposeToFix.mlir
mlir/benchmark/pluto/: 2mm.pluto.c  atax.pluto.c  bicg.pluto.c  gesummv.pluto.c  mvt.pluto.c
mlir/benchmark/tests/: Jacobi1d.mlir  jacobi1.mlir
mlir/benchmark/utils/: run_linalg.sh
mlir/benchmark_section5.1/: 2mm.mlir  README.md  darknet.mlir  main.cpp  mm.mlir
mlir/benchmark_section5.2/: 3mm.mlir  CMakeLists.txt  README.md  ab-acd-dbc.mlir  abc-acd-db.mlir  abc-bda-dc.mlir  atax.mlir  bicg.mlir  contraction_ab_cad_dcb.mlir  contraction_abc_ad_bdc.mlir  contraction_abcd_aebf_dfce.mlir  contraction_abcd_aebf_fdec.mlir  gemver.mlir  gesummv.mlir  main.cpp  mvt.mlir  print_stats.cc  run.sh  time.cpp
mlir/benchmark_section5.2/AMD/: cpu_co28.txt  result_blas.txt  result_clang.txt  result_linalg.txt  result_pluto.txt
mlir/benchmark_section5.2/AWS/: README.md
mlir/benchmark_section5.2/Intel/: cpu_co24.txt  result_blas.txt  result_clang.txt  result_linalg.txt  result_pluto.txt
mlir/benchmark_section5.2/Xeon/: cpu.txt  peak.txt  result_blas.txt  result_clang.txt  result_linalg.txt  result_pluto.txt
mlir/benchmark_section5.2/clang/: ab-acd-dbc.c  ab-acd-dbc.h  ab-cad-dcb.c  ab-cad-dcb.h  abc-acd-db.c  abc-acd-db.h  abc-ad-bdc.c  abc-ad-bdc.h  abc-bda-dc.c  abcd-aebf-dfce.c  abcd-aebf-fdec.c  conv2d-nchw.c  conv2d-nchw.h
mlir/benchmark_section5.2/mlir/: 2mm.mlir  3mm.mlir  ab-acd-dbc.mlir  ab-cad-dcb.mlir  abc-acd-db.mlir  abc-ad-bdc.mlir  abc-bda-dc.mlir  abcd-aebf-dfce.mlir  abcd-aebf-fdec.mlir  atax.mlir  bicg.mlir  conv2d-nchw.linalg.mlir  conv2d-nchw.mlir  convolution.cpp  gemm.mlir  gemver.mlir  gesummv.mlir  mvt.mlir
mlir/benchmark_section5.2/pluto/: 2mm.h  3mm.c  ab-acd-dbc.c  ab-cad-dcb.c  abc-acd-db.c  abc-ad-bdc.c  abc-bda-dc.c  abc-bda-dc.h  abcd-aebf-dfce.c  abcd-aebf-dfce.h  abcd-aebf-fdec.c  conv2d-nchw.c  gemm.c  gemver.c
mlir/benchmark_section5.3/: README.md  dynprog_loops_4.mlir  dynprog_loops_5.mlir  dynprog_loops_6.mlir  main.cpp
mlir/benchmark_section5.3/Xeon/: result_chain_4.txt  result_chain_5.txt  result_chain_6.txt
mlir/benchmark_section5.3/timed/: dynprog_linalg_timed_4_IP.mlir  dynprog_linalg_timed_4_OP.mlir  dynprog_linalg_timed_5.mlir  dynprog_linalg_timed_6.mlir  dynprog_linalg_timed_6_OP.mlir  dynprog_linalg_timed_opt_5.mlir  print_stats.cc  run.sh
mlir/cmake/modules/: FindMKLDNN.cmake  FindONEDNN.cmake
mlir/include/mlir/: InitAllPasses.h
mlir/include/mlir/Analysis/: LoopAnalysis.h
mlir/include/mlir/IR/: Access-inl.h  Access.h  AffineExpr.h  Matchers.h  MatchersBinaryOp.h  Types.h  Value.h
mlir/include/mlir/Transforms/: LoopUtils.h  Passes.h  Passes.td
mlir/lib/: CMakeLists.txt
mlir/lib/Analysis/: LoopAnalysis.cpp  NestedMatcher.cpp
mlir/lib/Conversion/LinalgToStandard/: LinalgToStandard.cpp
mlir/lib/Conversion/RaiseAffineToLinalg/: CMakeLists.txt  RaiseAffineToLinalg.cpp  RaiseAffineToLinalgPass.cpp
mlir/lib/Conversion/RaiseAffineToStencil/: CMakeLists.txt  RaiseAffineToStencilPass.cpp
mlir/lib/Conversion/StandardToLLVM/: StandardToLLVM.cpp
mlir/lib/Dialect/StandardOps/: Ops.cpp
mlir/lib/ExecutionEngine/: RunnerUtils.cpp
mlir/lib/IR/: Access.cpp  AsmPrinter.cpp  CMakeLists.txt  Value.cpp
mlir/lib/Tactics/: CMakeLists.txt  HelpersCommon.h  HelpersCpu.h  Tactics.td  TacticsBlasCpu.cpp  TacticsBlasGpu.cpp  TacticsLinalg.cpp
mlir/lib/Transforms/: BlisPolyhedralOpt.cpp  CMakeLists.txt  HigherOrderPolyhedralOpt.cpp
mlir/lib/Transforms/Utils/: LoopUtils.cpp
mlir/results/Xeon/: cpu.txt
mlir/results/Xeon/section5.2/: result_blas.txt  result_clang.txt  result_linalg.txt  result_pluto.txt
mlir/results/Xeon/section5.3/: result_chain_4.txt  result_chain_5.txt  result_chain_6.txt
mlir/test/Conversion/RaiseAffineToLinalg/: raise-affine-to-blas.mlir  raise-affine-to-linalg.mlir
mlir/test/Conversion/RaiseAffineToStencil/: raise-affine-to-stencil.mlir
mlir/test/Dialect/Linalg/: affine.mlir  canonicalize.mlir  fusion-2-level.mlir  fusion.mlir  invalid.mlir  loops.mlir  promote.mlir  promotion_options.mlir  roundtrip.mlir  tile.mlir  tile_conv.mlir  tile_conv_padding.mlir  tile_parallel.mlir  tile_parallel_reduce.mlir  tile_simple_conv.mlir  transform-patterns-matmul-to-vector.mlir  transform-patterns.mlir
mlir/test/EDSC/: builder-api-test.cpp
mlir/test/IR/: test-matchers.mlir
mlir/test/lib/: CMakeLists.txt
mlir/test/lib/IR/: TestMatchers.cpp
mlir/test/lib/Tactics/: CMakeLists.txt  Helpers.h  HelpersCommon.h  HelpersCpu.h  HelpersGpu.h  HelpersLinalg.h  TestTactics.cpp  TestTactics.td  TestTacticsBlas.cpp  TestTacticsBlasCpu.cpp  TestTacticsBlasGpu.cpp  TestTacticsLinalg.cpp  lit.local.cfg
mlir/test/mlir-cpu-runner/: CMakeLists.txt  linalg_integration_test.mlir  mlir_test_cblas.cpp  mlir_test_cblas_interface.cpp  unranked_memref.mlir
mlir/test/mlir-cpu-runner/include/: mlir_test_cblas.h  mlir_test_cblas_interface.h
mlir/test/mlir-tblgen/: tactics-blas.mlir  tactics-linalg.mlir  tactics-tensors-with-blas-cpu.mlir  tactics-tensors-with-blas-gpu.mlir  tactics-tensors-with-blas.mlir  tactics.mlir
mlir/tools/mlir-opt/: CMakeLists.txt  mlir-opt.cpp
mlir/tools/mlir-pet/: CMakeLists.txt  mlir-pet.cc
mlir/tools/mlir-pet/Lib/: access-inl.h  access.h  access_patterns.cc  access_patterns.h  builders.cc  builders.h  islNodeBuilder.cc  islNodeBuilder.h  matchers-inl.h  matchers.cc  matchers.h  mlirCodegen.cc  mlirCodegen.h  operators.h
mlir/tools/mlir-pet/Test/: syrk.mlir  (+2 more)
mlir/tools/mlir-tblgen/: CMakeLists.txt  MatchersGen.cpp  MatchersGen.h
(+26 files in other folders)
